# Mir

./: docker-compose.yml  pyproject.toml  readme.md  setup.cfg
compose/production/bot/: Dockerfile  start.sh
src/: commands.py  handlers.py  main.py
src/conf/: settings.py
